# adk_terraform_project

./: .gitignore  README.md  main.py  main.tf  outputs.tf  pyproject.toml  variables.tf
function-source/: main.py  requirements.txt
multi_tool_agent/: agent.py
